force-app/main/default/objects/solicitacao_de_pagamento__c/solicitacao_de_pagamento__c.object-meta.xml
<CustomObject>
    <label>Solicitação de pagamento</label>
    <nameField>
        <label>Nome de Solicitação de pagamento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solicitações de pagamentos</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>