force-app/main/default/objects/solicitacao_de_pagamento__c/fields/acao_interna__c.field-meta.xml
<CustomField>
    <fullName>acao_interna__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ação interna</label>
    <type>Checkbox</type>
</CustomField>