force-app/main/default/objects/solicitacao_de_pagamento__c/fields/Agencia_sem_digito__c.field-meta.xml
<CustomField>
    <fullName>Agencia_sem_digito__c</fullName>
    <label>Agência</label>
    <length>10</length>
    <type>Text</type>
</CustomField>