force-app/main/default/objects/solicitacao_de_pagamento__c/fields/Banco__c.field-meta.xml
<CustomField>
    <fullName>Banco__c</fullName>
    <label>Banco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001 – Banco do Brasil S.A.</fullName>
            </value>
            <value>
                <fullName>033 – Banco Santander (Brasil) S.A.</fullName>
            </value>
            <value>
                <fullName>104 – Caixa Econômica Federal</fullName>
            </value>
            <value>
                <fullName>237 – Banco Bradesco S.A.</fullName>
            </value>
            <value>
                <fullName>341 – Banco Itaú S.A.</fullName>
            </value>
            <value>
                <fullName>389 – Banco Mercantil do Brasil S.A.</fullName>
            </value>
            <value>
                <fullName>652 – Itaú Unibanco Holding S.A.</fullName>
            </value>
            <value>
                <fullName>000 - Outro</fullName>
            </value>
            <value>
                <fullName>356 – Banco Real S.A. (antigo)</fullName>
                <isActive>false</isActive>
                <label>356 – Banco Real S.A. (antigo)</label>
            </value>
            <value>
                <fullName>422 – Banco Safra S.A.</fullName>
                <isActive>false</isActive>
                <label>422 – Banco Safra S.A.</label>
            </value>
            <value>
                <fullName>745 – Banco Citibank S.A.</fullName>
                <isActive>false</isActive>
                <label>745 – Banco Citibank S.A.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>