force-app/main/default/objects/solicitacao_de_pagamento__c/fields/Boleto__c.field-meta.xml
<CustomField>
    <fullName>Boleto__c</fullName>
    <label>Boleto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>