force-app/main/default/objects/solicitacao_de_pagamento__c/fields/Chave_pix__c.field-meta.xml
<CustomField>
    <fullName>Chave_pix__c</fullName>
    <label>Chave pix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>