force-app/main/default/objects/solicitacao_de_pagamento__c/fields/CNPJ_ou_CPF_do_benefici_rio__c.field-meta.xml
<CustomField>
    <fullName>CNPJ_ou_CPF_do_benefici_rio__c</fullName>
    <label>CNPJ ou CPF do beneficiário</label>
    <length>25</length>
    <type>Text</type>
</CustomField>