force-app/main/default/objects/solicitacao_de_pagamento__c/fields/conta_com_digito__c.field-meta.xml
<CustomField>
    <fullName>conta_com_digito__c</fullName>
    <label>Conta (sem digito)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>