force-app/main/default/objects/solicitacao_de_pagamento__c/fields/Descri_o__c.field-meta.xml
<CustomField>
    <fullName>Descri_o__c</fullName>
    <label>Descrição</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>