force-app/main/default/objects/solicitacao_de_pagamento__c/fields/fornecedor__c.field-meta.xml
<CustomField>
    <fullName>fornecedor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fornecedor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>FORNECEDOR</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Solicitações de pagamentos</relationshipLabel>
    <relationshipName>Solicita_es_de_pagamentos</relationshipName>
    <type>Lookup</type>
</CustomField>