force-app/main/default/objects/solicitacao_de_pagamento__c/fields/Pagador__c.field-meta.xml
<CustomField>
    <fullName>Pagador__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Pagador</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>Account.Id</field>
            <operation>equals</operation>
            <value>0016e000039RTPX,001U40000010gmg,0016e00003JCYFt,001i00000085QYb,0015A00002GC6r6,0015A00001yGbVZ,0015A00002SZiBc,0015A00001tSrPa</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Solicitações de pagamentos (Pagador)</relationshipLabel>
    <relationshipName>Solicita_es_de_pagamentos1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>