force-app/main/default/objects/solicitacao_de_pagamento__c/fields/Tipo_de_Chave_pix__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Chave_pix__c</fullName>
    <label>Tipo de chave pix</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPF</fullName>
            </value>
            <value>
                <fullName>CNPJ</fullName>
            </value>
            <value>
                <fullName>EMAIL</fullName>
            </value>
            <value>
                <fullName>TELEFONE</fullName>
            </value>
            <value>
                <fullName>CHAVE ALEATÓRIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>