force-app/main/default/objects/solicitacao_de_pagamento__c/recordTypes/Pedido_de_Compra_Solicita_o_de_Pagamento.recordType-meta.xml
<RecordType>
    <fullName>Pedido_de_Compra_Solicita_o_de_Pagamento</fullName>
    <active>true</active>
    <label>Pedido de Compra Solicitação de Pagamento</label>
</RecordType>