force-app/main/default/objects/solicitacao_de_pagamento__c/recordTypes/solicitacao_avulsa.recordType-meta.xml
<RecordType>
    <fullName>solicitacao_avulsa</fullName>
    <active>true</active>
    <label>Solicitação avulsa</label>
</RecordType>