force-app/main/default/objects/solicitacao_de_pagamento__c/validationRules/boleto.validationRule-meta.xml
<ValidationRule>
    <fullName>boleto</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Forma_de_Pagamento__c) == &quot;BOLETO&quot; &amp;&amp; 
( Boleto__c  == &quot;&quot;||
Chave_pix__c &lt;&gt;&quot;&quot;)</errorConditionFormula>
    <errorMessage>Forma de pagamento &quot;Selecionado&quot; selecionado, certifique-se de que o campo PIX está vazio e que o campo de BOLETO está preenchido</errorMessage>
</ValidationRule>