force-app/main/default/objects/solicitacao_de_pagamento__c/validationRules/pix_outros_valores_selecionados.validationRule-meta.xml
<ValidationRule>
    <fullName>pix_outros_valores_selecionados</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Forma_de_Pagamento__c) == &quot;PIX&quot; &amp;&amp; (
TEXT(Banco__c) == null || 
Agencia_sem_digito__c == &quot;&quot; ||
CNPJ_ou_CPF_do_benefici_rio__c == &quot;&quot; ||
conta_com_digito__c == &quot;&quot; ||
digito_da_conta__c == &quot;&quot; ||
Boleto__c &lt;&gt; &quot;&quot; )</errorConditionFormula>
    <errorDisplayField>Tipo_de_Chave_pix__c</errorDisplayField>
    <errorMessage>Forma de pagamento &quot;PIX&quot; selecionado, certifique-se de que os dados bancarios estão preenchidos e que os dados do boleto estão vazios</errorMessage>
</ValidationRule>