force-app/main/default/objects/solicitacao_de_pagamento__c/validationRules/pix_vefica_campo.validationRule-meta.xml
<ValidationRule>
    <fullName>pix_vefica_campo</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Forma_de_Pagamento__c) == &quot;PIX&quot; &amp;&amp; 
TEXT(Tipo_de_Chave_pix__c)!= &quot;&quot;&amp;&amp;
Chave_pix__c ==&quot;&quot;</errorConditionFormula>
    <errorDisplayField>Chave_pix__c</errorDisplayField>
    <errorMessage>Qual é a chave pix?</errorMessage>
</ValidationRule>