force-app/main/default/objects/solicitacao_de_pagamento__c/validationRules/status_rascunho_aprovaCAO.validationRule-meta.xml
<ValidationRule>
    <fullName>status_rascunho_aprovaCAO</fullName>
    <active>true</active>
    <errorConditionFormula>acao_interna__c == false &amp;&amp;   TEXT(Statustus__c ) == &quot;Em aprovação&quot;</errorConditionFormula>
    <errorDisplayField>Statustus__c</errorDisplayField>
    <errorMessage>Você não pode mudar para aprovação alterando o status.</errorMessage>
</ValidationRule>