force-app/main/default/objects/solicitacao_de_pagamento__c/validationRules/Trava_Pedido_de_compra.validationRule-meta.xml
<ValidationRule>
    <fullName>Trava_Pedido_de_compra</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName == &quot;Pedido de Compra Solicitação de Pagamento&quot; &amp;&amp;  Pedido_de_Compra__c == null</errorConditionFormula>
    <errorDisplayField>Pedido_de_Compra__c</errorDisplayField>
    <errorMessage>Insira um Pedido de Compra</errorMessage>
</ValidationRule>