force-app/main/default/objects/solicitacao_de_pagamento__c/validationRules/valida_status.validationRule-meta.xml
<ValidationRule>
    <fullName>valida_status</fullName>
    <active>true</active>
    <errorConditionFormula>a_o_interna_2__c == false &amp;&amp;  TEXT( Statustus__c ) == &quot;Aguardando pagamento&quot;
||
 a_o_interna_2__c == false &amp;&amp;  TEXT( Statustus__c ) == &quot;Pago&quot;</errorConditionFormula>
    <errorDisplayField>Statustus__c</errorDisplayField>
    <errorMessage>você não pode mudar o status enquanto a solicitação não for aprovada</errorMessage>
</ValidationRule>